# launch-inertia

./: .env.example  .gitignore  CAPTURE_WORKFLOW.md  CHANGELOG.md  CLAUDE.md  COMO_RODAR.txt  COURSE_SYSTEM_RESEARCH.md  DESIGN_SYSTEM.md  FRONTEND_ARCHITECTURE_ANALYSIS.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  TRACKING_FIX_PLAN.md  manage.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
backend/: pyproject.toml  pyrightconfig.json
backend/src/: conftest.py
backend/src/config/: environment.py  urls.py
backend/src/core/: types.py
backend/src/infrastructure/: __init__.py
backend/src/tests/: factories.py  test_checkout.py  test_contact_system.py  test_hashed_cookies.py  test_lifecycle_service.py  test_middleware.py  test_p0p1_dedicated.py  test_security.py
backend/templates/emails/: email_verification.txt  password_reset.txt  welcome.txt
docs/: README.md
docs/architecture/: capture-data-architecture.md  contacts-analysis.md  frontend-architecture-analysis.md
docs/archive/: ecosystem-suggestions.md
docs/archive/capture-legacy/: capture-workflow.md  tracking-fix-plan.md
docs/domain/: design-system.md  session-fingerprint-explained.md
docs/process/: accelerate-multi-agent-team-os.md  accelerate-stack-team-matrix.md  accelerate-subagent-handoff-templates.md  implementation-plan.md  landing-parity-plan.md
docs/research/: course-system-research.md
docs/runbooks/: local-development.md  project-onboarding.md
frontend/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: main.tsx
frontend/src/components/: index.ts
frontend/src/layouts/: AuthLayout.tsx  DashboardLayout.tsx  OnboardingLayout.tsx
frontend/src/pages/: Delinquent.tsx
frontend/src/styles/: globals.css
frontend/src/tests/: Button.test.tsx  FormErrorBanner.test.tsx  InputField.test.tsx
frontend/src/types/: index.ts
frontends/dashboard/: package.json  vite.config.ts
frontends/docusaurus/: README.md
frontends/docusaurus/docs/: identity-resolution-gap-analysis.md  identity-resolution-runtime-flow.md  intro.md  lead-capture-production-hardening.md  lead-capture-rollout-no-json-fallback.md  lead-capture-workflow-to-be.md  lead-capture-workflow.md
frontends/landing/: package-lock.json  package.json  vite.config.ts
frontends/landing/src/: main.tsx  vite-env.d.ts
src/: conftest.py
src/apps/: __init__.py
src/apps/ads/: admin.py  apps.py  models.py
src/apps/billing/: __init__.py  apps.py  views.py
src/apps/contacts/: __init__.py  apps.py  models.py  urls.py  views.py
src/apps/identity/: apps.py  signals.py  urls.py  views.py
src/apps/landing/: admin.py  apps.py  checkout_views.py  models.py  urls.py  views.py
src/apps/launches/: models.py  services.py  signals.py
src/apps/notifications/: consumers.py  models.py  routing.py  tasks.py  urls.py  views.py
src/config/: asgi.py  environment.py  urls.py  wsgi.py
src/config/settings/: __init__.py  base.py  development.py  flags.py  production.py  test_memory.py
src/core/inertia/: __init__.py  helpers.py  middleware.py
src/core/security/: __init__.py
src/core/shared/: __init__.py  hashing.py
src/core/tracking/: identity_middleware.py  middleware.py  models.py  services.py
src/infrastructure/cache/: __init__.py  client.py  decorators.py
src/tests/: factories.py  test_ads.py  test_analytics_service.py  test_capture.py  test_checkout.py  test_contact_system.py  test_contacts_service.py  test_identity_services.py  test_landing_admin.py  test_launches.py  test_lifecycle_service.py  test_meta_capi.py  test_middleware.py  test_p0p1_dedicated.py  test_security.py  test_tracking.py
templates/: base.html  dashboard.html  landing.html
templates/emails/: email_verification.html  password_reset.html  welcome.html
(+554 files in other folders)
